[tool.poetry]
name = "excelapi"
version = "0.1.0"
description = ""
authors = ["k-kan-dev <k.kan.splended@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.20.0"
openpyxl = "^3.1.1"
fastapi = {extras = ["all"], version = "^0.92.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
